enums1/stdout.txt
Checking test execution result...
[!] Test execution result: FAILED
Checking source code format...
  Preparing source code for format check...
  Running format check...
// =====================================================
//  Running cargo fmt...
// =====================================================

// =====================================================
//    Running cargo clippy...
// =====================================================

    Checking format_check v0.1.0 (/home/runner/work/rustlings-eviarch666/rustlings-eviarch666/format_check)
error[E0599]: no variant or associated item named `Quit` found for enum `Message` in the current scope
  --> src/lib.rs:13:31
   |
8  | enum Message {
   | ------------ variant or associated item `Quit` not found for this enum
...
13 |     println!("{:?}", Message::Quit);
   |                               ^^^^ variant or associated item not found in `Message`

